# libjpeg-turbo

./: README.md  from-github--config
external_app_test_folder/: CMakeLists.txt  mymathApp.cc
libjpeg-turbo/: CMakeLists.txt
libjpeg-turbo_19.0.24215.1_install/lib/: jpeg-static.lib  jpeg-staticd.lib  jpeg.lib  jpegd.lib  turbojpeg-static.lib  turbojpeg-staticd.lib  turbojpeg.lib  turbojpegd.lib
libjpeg-turbo_19.0.24215.1_install/lib/cmake/libjpeg-turbo/: libjpeg-turboTargets-debug.cmake
libjpeg-turbo_19.0.24215.1_install/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
